compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_higher_order_function_anonymous.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 82
expression: "\nimport gleam/result\n\npub fn main() {\n  result.try(Ok(10), fn(value) {\n    Ok({ value + 2 } * 4)\n  })\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam/result

pub fn main() {
  result.try(Ok(10), fn(value) {
    Ok({ value + 2 } * 4)
  })
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> {ok, integer()} | {error, any()}.
main() ->
    case {ok, 10} of
        {ok, Value} ->
            {ok, (Value + 2) * 4};

        {error, Error} ->
            {error, Error}
    end.
