compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inline_variable_shadowing_case_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 416
expression: "\npub fn sum() {\n  case 1, 2 {\n    a, b -> fn(x) {\n      let a = 7\n      x + a\n    }(a + b)\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn sum() {
  case 1, 2 {
    a, b -> fn(x) {
      let a = 7
      x + a
    }(a + b)
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([sum/0]).

-file("project/test/my/mod.gleam", 2).
-spec sum() -> integer().
sum() ->
    case {1, 2} of
        {A, B} ->
            _inline_a_0 = 7,
            (A + B) + _inline_a_0
    end.
