compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__inlining__inlining_works_through_blocks.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/inlining.rs
assertion_line: 256
expression: "\npub fn main() {\n    { fn(x) { Ok(x + 1) } }(41)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    { fn(x) { Ok(x + 1) } }(41)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> {ok, integer()} | {error, any()}.
main() ->
    {ok, 41 + 1}.
